checkpoint stable but with issues,needs to fix jump height and screen size for retro game box

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
   color: #013a63;
   padding: 6px 12px;
   font-size: 0.9rem;
-  color: #013a63;
+  color: #e7ebee;
   box-sizing: border-box;
 }
 
